
add_subdirectory( strings )
# add_subdirectory( scripting )
add_subdirectory( varviewer )
add_subdirectory( vartrigs )
add_subdirectory( mapper )
add_subdirectory( converter )
# add_subdirectory( test )

include_directories( ${KDE4_INCLUDE_DIR} ${QT_INCLUDES}  )


########### install files ###############



