


########### install files ###############

install( FILES  kmuddy-usock-client.pl kmuddy-usock-test.pl kmuddyvars.h locktest.c pre.c README testserver.cpp tmpserver.pl vartest.c DESTINATION ${KDE_INSTALL_DATADIR}/kmuddy )



#original Makefile.am contents follow:

#INCLUDES = 
#METASOURCES = AUTO
#pkgdata_SCRIPTS =  kmuddy-usock-client.pl kmuddy-usock-test.pl kmuddyvars.h locktest.c pre.c README testserver.cpp tmpserver.pl vartest.c
